Fixed mobile contact page and project page spacing

--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -98,6 +98,7 @@
 
   main {
     grid-row: auto;
+    padding: 1vh 6.67vw;
   }
 
   #mobile-contact-button {
@@ -149,18 +150,32 @@
     margin-bottom: 40px;
   }
 
+  // Projects Page
+  .projects {
+    align-self: flex-start;
+  }
+
+  .card {
+    padding-top: 35px;
+  }
   // Contact Page
   .contact {
-    padding: 20px 6.67vw;
-    align-content: flex-start;
-    height: fit-content;
-  }
-  .contact-wrapper {
-    padding: 0 0 30px 0;
+    height: 100%;
   }
 
   .contact-section {
-    align-items: center;
+    align-self: center;
+    height: 100%;
+  }
+
+  .email {
+    padding-bottom: 10px;
+  }
+  .linkedin {
+    padding: 10px 0;
+  }
+  .github {
+    padding-top: 10px;
   }
 
   .contact-svg {
